css/guest-author-widget.styl
.guest-author-widget
  padding 20px
  border 1px solid rgba(227,229,231,0.50)
  border-radius 3px
  background #FFFFFF
  animation-iteration-count 1
  animation-direction forwards
  article
    position relative

  .close-btn
    position absolute
    top -5px
    right -5px
    width 20px
    height 20px
    border 0
    padding 0
    background transparent
    &:focus
      outline none

  .guest-author-title
    margin 0 auto 15px
    font-size 18px
    text-align center
    line-height 25px
    color #000000
    opacity 0.87

  .guest-author-image
    max-width 200px
    display block
    margin 0 auto 30px

  .guest-author-link
    display block
    font-size 16px
    letter-spacing 0.5px
    line-height 23px
    text-align center
    color #0A86B1

